add ability to install shared URL from web interface

--- a/data/assets/index.html
+++ b/data/assets/index.html
@@ -41,6 +41,7 @@
         permissionsUrl: '/__local__/permission',
         installUrl: '/__local__/install',
         uploadResumeSizeUrl: '__local__/uploadResumeSize',
+        installUrlUrl: '/__local__/install_url',
         multipleDownloadFileName: 'ezremote-client.zip',
         isExtractableFilePattern: /\.(7z|rar|zip)$/i,
         pickCallback: function (item) {
